# qmlgreet

./: .gitignore  README.md  meson.build  qmlgreet.conf  resources.qrc
.github/workflows/: build.yml
qml/: StyledButton.qml  StyledComboBox.qml  main.qml
scripts/: build-deb.sh  install-build-deps.sh
src/: main.cpp
src/backend/: AuthWrapper.cpp  AuthWrapper.h  ColorSchemeLoader.cpp  ColorSchemeLoader.h  LayerShell.cpp  LayerShell.h  LoggingMacros.h  SessionModel.cpp  SessionModel.h  SystemBattery.cpp  SystemBattery.h  SystemPower.cpp  SystemPower.h  UserModel.cpp  UserModel.h
